# materials-zone-api-examples

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/create-db-from-backup/: README.md  create_db_from_backup.py  read_table_to_dataframe.py
examples/create_db_from_backup/: README.md  create_db_from_backup.py  pyproject.toml
examples/parser_api_examples/: README.md  main.py  more_examples.py  mz_operations.py  mz_request_helpers.py
examples/parser_manager_cli/: README.md  main.py  mz_api_helpers.py  mz_operations.py
examples/parser_manager_cli/measurement_files/: keithley_iv.csv
examples/parser_manager_cli/new_parsers/: keithley_iv.json
examples/quantum_dot_api_example/: README.md  analysis.py  main.py  mz_api_helpers.py  mz_operations.py  quantum_dot_example.xlsx  requirements.txt  upload_quantum_dot_data.py  upload_quantum_dots_data.py
examples/quantum_dot_api_example/measurements/: experiment_01_measurement.csv  experiment_02_measurement.csv  experiment_03_measurement.csv  experiment_04_measurement.csv  experiment_05_measurement.csv  experiment_06_measurement.csv  experiment_07_measurement.csv  experiment_08_measurement.csv  experiment_09_measurement.csv  experiment_10_measurement.csv
