[project]
name = "materials-zone-api-examples"
version = "0.1.0"
description = ""
authors = [
    {name = "Dan Tamam",email = "66686909+dantamam@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
